# docx-system

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  DOCKER_README.md  Dockerfile  DocxMcp.sln  README.md  build.sh  docker-compose.yml  publish.sh  test-mcp.sh
.claude/: settings.local.json
.github/scripts/: generate-release-notes.sh  prepare-release-assets.sh
.github/workflows/: build-website.yml  deploy-website.yml  docker-build.yml
crates/docx-mcp-proxy/: Cargo.toml  Dockerfile
crates/docx-mcp-proxy/src/: main.rs
crates/docx-mcp-sse-proxy/: Cargo.toml
crates/docx-mcp-sse-proxy/src/: auth.rs  config.rs  error.rs  handlers.rs  main.rs  mcp.rs
crates/docx-mcp-storage/: Cargo.toml  build.rs
crates/docx-mcp-storage/src/: config.rs  error.rs  main.rs  service.rs
crates/docx-mcp-storage/src/lock/: file.rs  mod.rs  traits.rs
crates/docx-mcp-storage/src/storage/: local.rs  mod.rs  traits.rs
crates/docx-storage-cloudflare/: Cargo.toml  Dockerfile  build.rs
crates/docx-storage-cloudflare/src/: config.rs  error.rs  kv.rs  main.rs  service.rs  service_sync.rs  service_watch.rs
crates/docx-storage-cloudflare/src/lock/: kv_lock.rs  mod.rs
crates/docx-storage-cloudflare/src/storage/: mod.rs  r2.rs
crates/docx-storage-cloudflare/src/sync/: mod.rs  r2_sync.rs
crates/docx-storage-cloudflare/src/watch/: mod.rs  polling.rs
crates/docx-storage-core/: Cargo.toml
crates/docx-storage-core/src/: error.rs  lib.rs  storage.rs  sync.rs  watch.rs
crates/docx-storage-local/: Cargo.toml  Dockerfile
crates/docx-storage-local/src/: config.rs  main.rs  service.rs  service_sync.rs  service_watch.rs
crates/docx-storage-local/src/lock/: file.rs  mod.rs
crates/docx-storage-local/src/storage/: local.rs  mod.rs
crates/docx-storage-local/src/sync/: local_file.rs  mod.rs
crates/docx-storage-local/src/watch/: mod.rs  notify_watcher.rs
crates/docx-storage-local/tests/fixtures/: index.json
docs/: BUILDING.md  PLAN-UI.md  SHAREPOINT_INTEGRATION_PLAN.md  design-dotnet-migration.md
infra/: Pulumi.prod.yaml  Pulumi.yaml  __main__.py  env-setup.sh
installers/macos/: build-dmg.sh  build-pkg.sh
installers/windows/: docx-mcp.iss
proto/: storage.proto
scripts/: run-docker-windows.bat  run-docker-windows.ps1
src/: docx_tools.rs  main.rs
src/DocxMcp/: DocxMcp.csproj  DocxSession.cs  Program.cs  SessionManager.cs  SessionRestoreService.cs
src/DocxMcp.Cli/: DocxMcp.Cli.csproj  Program.cs  WatchDaemon.cs
src/DocxMcp.Grpc/: GrpcLauncher.cs  IStorageClient.cs  IndexTypes.cs  StorageClient.cs  StorageClientOptions.cs  TenantContext.cs
src/DocxMcp.Ui/: DocxMcp.Ui.csproj  Program.cs  UiJsonContext.cs
src/DocxMcp.Ui/Models/: HistoryEntryDto.cs  SessionDetailDto.cs  SessionEvent.cs  SessionListItem.cs
src/DocxMcp.Ui/Services/: EventBroadcaster.cs  LruCache.cs  SessionBrowserService.cs
src/DocxMcp.Ui/wwwroot/: index.html
src/DocxMcp.Ui/wwwroot/css/: app.css
src/DocxMcp.Ui/wwwroot/js/: app.js  documentTree.js  docxRenderer.js  sseClient.js
src/DocxMcp.Ui/wwwroot/js/views/: diffView.js  sessionDetail.js  sessionList.js
src/DocxMcp.WordAddin/: DocxMcp.WordAddin.csproj  Program.cs
src/DocxMcp.WordAddin/Models/: LlmModels.cs
src/DocxMcp.WordAddin/Services/: ClaudeService.cs  UserChangeService.cs
src/DocxMcp/Diff/: DiffEngine.cs  DiffResult.cs  ElementSnapshot.cs
src/DocxMcp/ExternalChanges/: ExternalChangeNotificationService.cs  ExternalChangePatch.cs  ExternalChangeTracker.cs
src/DocxMcp/Helpers/: ContentHasher.cs  ElementFactory.cs  ElementIdManager.cs  OpenXmlExtensions.cs  RevisionHelper.cs
src/DocxMcp/Models/: PatchOperation.cs
src/DocxMcp/Paths/: DocxPath.cs  PathParser.cs  PathResolver.cs  PathSchema.cs  PathSegment.cs  Selector.cs
src/DocxMcp/Persistence/: HistoryTypes.cs  MappedWal.cs  SessionIndex.cs  SessionLock.cs  SessionStore.cs  WalEntry.cs
src/DocxMcp/Tools/: CommentTools.cs  CountTool.cs  DocumentTools.cs  ElementTools.cs  ExportTools.cs  ExternalChangeTools.cs  HistoryTools.cs  PatchTool.cs  QueryTool.cs  ReadHeadingContentTool.cs  ReadSectionTool.cs  StyleTools.cs
tests/DocxMcp.Tests/: AutoSaveTests.cs  CommentTests.cs  ConcurrentPersistenceTests.cs  ContentHasherTests.cs  CountToolTests.cs  DebugDiffIssues.cs  DebugDiffIssues2.cs  DiffEngineTests.cs  DocxMcp.Tests.csproj  ElementIdTests.cs  ExternalChangeTrackerTests.cs  ExternalSyncTests.cs  MappedWalTests.cs  PatchEngineTests.cs  PatchLimitTests.cs  PatchResultTests.cs  PathParserTests.cs  PathResolverTests.cs  QueryPaginationTests.cs  QueryRoundTripTests.cs  QueryTests.cs  ReadHeadingContentTests.cs  ReadSectionTests.cs  RunLevelWriteTests.cs  SessionPersistenceTests.cs  SessionStoreTests.cs  StyleTests.cs  SyncDuplicateTests.cs  TableModificationTests.cs  TestHelpers.cs  UndoRedoTests.cs
website/: .gitignore  astro.config.mjs  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
website/migrations/: 0001_auth_tables.sql  0002_tenant_tables.sql  0003_pat_tables.sql  0004_user_preferences.sql
website/public/: CNAME
website/scripts/: fix-pages-config.mjs
website/src/: env.d.ts  middleware.ts
website/src/components/: AuthAwareUI.astro  Cta.astro  Doccy.astro  Footer.astro  Hero.astro  Nav.astro  PatManager.astro  Problem.astro  Products.astro  Vision.astro
website/src/i18n/: ui.ts  utils.ts
website/src/layouts/: Layout.astro
website/src/lib/: auth-client.ts  auth.ts  gcs.ts  pat.ts  tenant.ts
website/src/pages/: connexion.astro  index.astro  tableau-de-bord.astro
website/src/pages/api/auth/: [...all].ts  logout.ts
website/src/pages/api/pat/: [id].ts  index.ts
website/src/pages/en/: dashboard.astro  index.astro  login.astro
word-addin/: manifest.xml  package.json  tsconfig.json  webpack.config.js
word-addin/src/services/: ChangeTracker.ts  LlmClient.ts  WordService.ts  index.ts
word-addin/src/taskpane/: App.tsx  index.tsx  taskpane.html
word-addin/src/types/: index.ts
