[package]
name = "docx-mcp-sse-proxy"
description = "SSE/HTTP proxy with D1 auth for docx-mcp multi-tenant architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Web framework
axum.workspace = true
tower-http.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# HTTP client (D1 API)
reqwest.workspace = true

# Cache
moka.workspace = true

# Crypto
sha2.workspace = true
hex.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Time
chrono.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# CLI
clap.workspace = true

[[bin]]
name = "docx-mcp-sse-proxy"
path = "src/main.rs"

[lints]
workspace = true
