[package]
name = "docx-mcp-storage"
description = "gRPC storage server for docx-mcp multi-tenant architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# gRPC
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# S3/R2 (for cloud backend)
aws-sdk-s3 = { workspace = true, optional = true }
aws-config = { workspace = true, optional = true }

# HTTP client (Cloudflare KV API)
reqwest = { workspace = true, optional = true }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# CLI
clap.workspace = true

# Paths
dirs = "6"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[features]
default = []
cloud = ["aws-sdk-s3", "aws-config", "reqwest"]

[[bin]]
name = "docx-mcp-storage"
path = "src/main.rs"

[lints]
workspace = true
