[package]
name = "docx-storage-cloudflare"
description = "Cloudflare R2/KV storage backend for docx-mcp multi-tenant architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Core traits
docx-storage-core = { path = "../docx-storage-core" }

# gRPC
tonic.workspace = true
tonic-reflection = "0.13"
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# S3/R2 client (R2 is S3-compatible)
aws-sdk-s3.workspace = true
aws-config.workspace = true

# HTTP client (for KV REST API)
reqwest.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# UUID
uuid = { version = "1", features = ["v4"] }

# CLI
clap.workspace = true

# Concurrent data structures
dashmap = "6"

# Crypto (for SHA256 hash)
sha2.workspace = true
hex.workspace = true

# Base64 encoding
base64 = "0.22"

# Bytes
bytes = "1"

# URL encoding (for KV keys)
urlencoding = "2"

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"
wiremock = "0.6"

[[bin]]
name = "docx-storage-cloudflare"
path = "src/main.rs"

[lints]
workspace = true
