[package]
name = "docx-storage-local"
description = "Local filesystem storage backend for docx-mcp multi-tenant architecture"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
# Core traits
docx-storage-core = { path = "../docx-storage-core" }

# gRPC
tonic.workspace = true
tonic-reflection = "0.13"
prost.workspace = true
prost-types.workspace = true
tokio.workspace = true
tokio-stream.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_bytes = "0.11"

# Logging
tracing.workspace = true
tracing-subscriber.workspace = true

# Error handling
thiserror.workspace = true
anyhow.workspace = true

# Async utilities
async-trait.workspace = true
futures.workspace = true

# Time
chrono.workspace = true

# UUID
uuid = { version = "1", features = ["v4"] }

# CLI
clap.workspace = true

# Paths
dirs = "6"

# File locking
fs2 = "0.4"
dashmap = "6"

# Filesystem watching
notify = "8"

# Crypto (for SHA256 hash - matching C# ExternalChangeTracker)
sha2.workspace = true

# Platform-specific for parent process watching
[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_System_Threading", "Win32_Security"] }

[build-dependencies]
tonic-build = "0.13"

[dev-dependencies]
tempfile.workspace = true
tokio-test = "0.4"

[[bin]]
name = "docx-storage-local"
path = "src/main.rs"

[lints]
workspace = true
